@startuml
  left to right direction

  namespace controller {
      class controller.GameController {
      }
    }
  

  namespace controller {
      class controller.MainController {
      }
    }
  

  namespace controller {
      class controller.MenuController {
      }
    }
  

  namespace model {
      abstract class model.Bug {
      }
    }
  

  namespace model {
      class model.BugsCreator {
      }
    }
  

  namespace model {
      class model.Butterfly {
      }
    }
  

  namespace model {
      class model.Cockroach {
      }
    }
  

  namespace model {
      class model.Fly {
      }
    }
  

  namespace model {
      class model.GameModel {
      }
    }
  

  namespace model {
      class model.Ladybug {
      }
    }
  

  namespace model {
      class model.Wasp {
      }
    }
  

  namespace view {
      class view.GamePanel {
      }
    }
  

 namespace view {
      class view.HUDPanel {
      }
    }
  

  namespace view {
      class view.MainView {
      }
    }
  

  namespace view {
      class view.MenuPanel {
      }
    }
  

  namespace view {
      class view.PausePanel {
      }
    }
  

  namespace view {
      class view.Swatter {
      }
    }
  

  controller.GameController o-- model.BugsCreator : bugsCreator
  controller.GameController o-- model.Bug : bugs
  controller.GameController o-- model.GameModel : gameModel
  controller.GameController o-- controller.MainController : mainController
  controller.MainController o-- controller.GameController : gameController
  controller.MainController o-- view.MainView : mainView

  controller.MainController o-- controller.MenuController : menuController


  controller.MenuController o-- controller.MainController : mainController
  model.Butterfly -up-|> model.Bug
  model.Cockroach -up-|> model.Bug
  model.Fly -up-|> model.Bug
  model.Ladybug -up-|> model.Bug
  model.Wasp -up-|> model.Bug
  view.GamePanel o-- model.Bug : bugs
  view.MainView o-- view.Swatter : swatter
  view.MainView o-- view.GamePanel : gamePanel
  view.MainView o-- view.HUDPanel : hudPanel
  view.MainView o-- view.MenuPanel : menuPanel
  view.MainView o-- view.PausePanel : pausePanel


@enduml
